add_executable(solution32 solution32.cpp)
add_executable(solution198_ solution198.cpp)
add_executable(dp_53 dp_solution53.cpp)


add_executable(dp_alg1 alg1.cpp)
add_executable(ZeroOnePack ZeroOnePack.cpp)
add_executable(backpack1 backpack1.cpp)

add_executable(niuke_dp2 niuke_dp2.cpp)
add_executable(niuke_dp3 niuke_dp3.cpp)
add_executable(niuke_dp4 niuke_dp4.cpp)