include_directories(../leetcode_alg/include)
add_executable(nio-1 nio-1.cpp)
add_executable(nio-2 nio-2.cpp)
add_executable(nio-3 nio-3.cpp)
add_executable(nio2-1 nio2-1.cpp)
add_executable(nio2-3 nio2-3.cpp)
add_executable(dj-1 dj-1.cpp)
add_executable(dajiang-A-1 dajiang-A-1.cpp)
add_executable(bytedance-1 bytedance-1.cpp)
add_executable(bytedance-2 bytedance-2.cpp)
add_executable(tencent-1 tencent-1.cpp)
add_executable(tencent-2 tencent-2.cpp)
add_executable(tencent-3 tencent-3.cpp)
add_executable(tencent-4 tencent-4.cpp)
add_executable(microsoft2 microsoft2.cpp)
add_executable(microsoft3 microsoft3.cpp)
add_executable(microsoft4 microsoft4.cpp)
add_executable(microsoft5 microsoft5.cpp)
add_executable(microsoft6 microsoft6.cpp)
add_executable(xvchenxi xvchenxi.cpp)
add_executable(huawei2 huawei2.cpp)
add_executable(huawei3 huawei3.cpp)

add_executable(netease1_1 netease1_1.cpp)
add_executable(netease2 netease2.cpp)
add_executable(netease_f1 netease_f1.cpp)
add_executable(netease_f2 netease_f2.cpp)
add_executable(netease_f3 netease_f3.cpp)
add_executable(interview-12 interview-12.cpp)

add_executable(redbook redbook.cpp)
add_executable(redbook1 redbook1.cpp)
add_executable(redbook3 redbook3.cpp)

add_executable(duxiaoman1 duxiaoman1.cpp)
