include_directories(include)

add_executable(solution6 solution6.cpp)

add_executable(solution1 solution1.cpp)
add_executable(solution2 solution2.cpp)
add_executable(solution3 solution3.cpp)
add_executable(solution4 solution4.cpp)
add_executable(solution5 solution5.cpp)
add_executable(solution8 solution8.cpp)
add_executable(solution9 solution9.cpp)
add_executable(solution11 solution11.cpp)
add_executable(solution12 solution12.cpp)
add_executable(solution13 solution13.cpp)
add_executable(solution14 solution14.cpp)
add_executable(solution15 solution15.cpp)
add_executable(solution16 solution16.cpp)
add_executable(solution17 solution17.cpp)
add_executable(solution18 solution18.cpp)
add_executable(solution19 solution19.cpp)
add_executable(solution20 solution20.cpp)
add_executable(solution21 solution21.cpp)
add_executable(solution22 solution22.cpp)
add_executable(solution23 solution23.cpp)
add_executable(solution24 solution24.cpp)

add_executable(solution26 solution26.cpp)


add_executable(solution30 solution30.cpp)
add_executable(solution31 solution31.cpp)
add_executable(solution33 solution33.cpp)
add_executable(solution34 solution34.cpp)
add_executable(solution37 solution37.cpp)
add_executable(solution38 solution38.cpp)
add_executable(solution39 solution39.cpp)
add_executable(solution40 solution40.cpp)
add_executable(solution41 solution41.cpp)
add_executable(solution42 solution42.cpp)

add_executable(solution43 solution43.cpp)
add_executable(solution44 solution44.cpp)
add_executable(solution46 solution46.cpp)
add_executable(solution47 solution47.cpp)
add_executable(solution49 solution49.cpp)
add_executable(solution51 solution51.cpp)
add_executable(solution54 solution54.cpp)
add_executable(solution55 solution55.cpp)
add_executable(solution58 solution58.cpp)
add_executable(solution60 solution60.cpp)


add_executable(solution67 solution67.cpp)
add_executable(solution75 solution75.cpp)
add_executable(solution81 solution81.cpp)
add_executable(solution83 solution83.cpp)
add_executable(solution84 solution84.cpp)
add_executable(solution84_bak solution84_bak.cpp)
add_executable(solution90 solution90.cpp)
add_executable(solution95 solution95.cpp)
add_executable(solution96 solution96.cpp)
add_executable(solution99 solution99.cpp)

add_executable(solution112 solution112.cpp)
add_executable(solution113 solution113.cpp)
add_executable(solution114 solution114.cpp)
add_executable(solution116 solution116.cpp)
add_executable(solution118 solution118.cpp)
add_executable(solution120 solution120.cpp)
add_executable(solution121 solution121.cpp)
add_executable(solution129 solution129.cpp)
add_executable(solution143 solution143.cpp)
add_executable(solution150 solution150.cpp)
add_executable(solution151 solution151.cpp)

add_executable(solution164 solution164.cpp)
add_executable(solution165 solution165.cpp)
add_executable(solution187 solution187.cpp)
add_executable(solution199 solution199.cpp)
add_executable(solution200 solution200.cpp)
add_executable(solution201 solution201.cpp)
add_executable(solution202 solution202.cpp)
add_executable(solution203 solution203.cpp)
add_executable(solution204 solution204.cpp)
add_executable(solution205 solution205.cpp)
add_executable(solution207 solution207.cpp)
add_executable(solution208 solution208.cpp)
add_executable(solution209 solution209.cpp)
add_executable(solution210 solution210.cpp)
add_executable(solution211 solution211.cpp)
add_executable(solution212 solution212.cpp)
add_executable(solution213 solution213.cpp)
add_executable(solution219 solution219.cpp)
add_executable(solution220 solution220.cpp)
add_executable(solution228 solution228.cpp)
add_executable(solution232 solution232.cpp)
add_executable(solution240 solution240.cpp)
add_executable(solution257 solution257.cpp)
add_executable(solution260 solution260.cpp)
add_executable(solution258 solution258.cpp)
add_executable(solution290 solution290.cpp)
add_executable(solution292 solution292.cpp)
add_executable(solution297 solution297.cpp)
add_executable(solution300 solution300.cpp)
add_executable(solution329 solution329.cpp)
add_executable(solution508 solution508.cpp)
add_executable(solution515 solution515.cpp)
add_executable(solution513 solution513.cpp)
add_executable(solution556 solution556.cpp)
add_executable(solution695 solution695.cpp)
add_executable(solution877 solution877.cpp)
add_executable(solution1089 solution1089.cpp)