add_executable(alg1 alg1.cpp)
add_executable(alg2 alg2.cpp)
add_executable(alg3 alg3.cpp)
add_executable(alg4 alg4.cpp)
add_executable(alg5 alg5.cpp)
add_executable(alg6 alg6.cpp)
add_executable(alg7 alg7.cpp)
add_executable(alg8 alg8.cpp)
add_executable(alg9 alg9.cpp)
add_executable(alg10 alg10.cpp)
add_executable(alg11 alg11.cpp)
add_executable(alg12 alg12.cpp)